# mathgraph

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
codex-skill/mathgraph-centered-research/: SKILL.md
codex-skill/mathgraph-centered-research/agents/: openai.yaml
codex-skill/mathgraph-centered-research/references/: change-protocol.md  graph-schema.md  init-index.md  rendering.md  workflow.md
docs/: mathgraph_project_spec.md
examples/linear_bayes_demo/experiments/: run_gaussian_recovery.py  run_student_t_change.py
examples/linear_bayes_demo/tests/: conftest.py  test_gaussian_recovery_script.py  test_student_t_change.py
experiments/: run_gaussian_recovery.py  run_student_t_change.py
mathgraph/: INIT_INDEX.jsonl  README.md  graph.yaml  schema.yaml
mathgraph/paper/: derivations.tex  main.tex
mathgraph/paper/declarations/: approx_student_t_map.tex  estimator_beta_map.tex  evidence_classification.tex  (+23 more)
src/linear_bayes/: __init__.py  diagnostics.py  experiments.py  likelihoods.py  simulate.py
src/mathgraph_tool/: __init__.py  analysis.py  checks.py  cli.py  discovery.py  indexing.py  init.py  loader.py  orphans.py  render.py  schema.py
tests/: test_gaussian_recovery_script.py  test_graph_references.py  test_linear_gaussian_recovery.py  test_mathgraph_analysis_commands.py  test_mathgraph_check.py  test_mathgraph_index.py  test_mathgraph_init.py  test_mathgraph_init_cli.py  test_mathgraph_orphans.py  test_mathgraph_render.py  test_python_compat.py  test_student_t_change.py
web/: app.js  graph.json  index.html  render-report.json  style.css
(+178 files in other folders)
