[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mathgraph"
version = "0.1.0"
description = "Local mathematics-centered graph tool for research workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "networkx>=3.2",
  "numpy>=1.24",
  "pydantic>=2.5",
  "PyYAML>=6.0",
  "scipy>=1.10",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
mathgraph = "mathgraph_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
